--- a/package.json
+++ b/package.json
@@ -14,5 +14,8 @@
   "bugs": {
     "url": "https://github.com/Fampa69/wojciechjozaf-automation-portfolio/issues"
   },
-  "homepage": "https://github.com/Fampa69/wojciechjozaf-automation-portfolio#readme"
+  "homepage": "https://github.com/Fampa69/wojciechjozaf-automation-portfolio#readme",
+  "devDependencies": {
+    "@playwright/test": "^1.58.2"
+  }
 }
